the old urls. As well making multiple course-section-placeholders aliases to a
single site for the course can allow that site to show up under the 'current
classes' listing for students in all sections of the course.

The user interface for copying sites has now been merged with the user-interface
for copying content for a more consistent user experience.

See the change-log for details on additional fixes and improvements.

Upgrades from versions prior to 2.2.5.0 require running system updaters located
under Admin Tools --> Segue Updates.

This Segue release uses Harmoni 1.8.2 and Polyphony 1.4.7.
		
		
	* Bug Fix: 
		Installation: Updated 'slot' table SQL so that updaters do not need to be
		run for new installations.
		(2008-10-14 - Adam Franco)
		
	* Bug Fix: 
		Installation: Reordered SQL files so that new installations will succeed.
		(2008-10-14 - Adam Franco)
	



v. 2.2.5.0 (2008-10-13)
----------------------------------------------------
This release add the ability to make empty site-placeholders aliases to placeholders
that contain sites. This enables sites to be moved and have users redirected from
the old urls. As well making multiple course-section-placeholders aliases to a
single site for the course can allow that site to show up under the 'current
classes' listing for students in all sections of the course.

The user interface for copying sites has now been merged with the user-interface
for copying content for a more consistent user experience.

See the change-log for details on additional fixes and improvements.

Upgrades from versions prior to 2.2.5.0 require running system updaters located
under Admin Tools --> Segue Updates.

This Segue release uses Harmoni 1.8.2 and Polyphony 1.4.7.
		
		
	* New feature: #2112719 
		Placeholders: Placeholders can now be made aliases of other placeholders.
		This allows automatic redirects to the target site as well as allowing sites
		to display under additional names in users' portals.