@@ -29,6 +29,8 @@
 <br>
 <br>The user interface for copying sites has now been merged with the user-interface for copying content for a more consistent user experience.
 <br>
+<br>The 2.2.5.1 bug-fix release adds improvements to the installation process to help ensure that new installations are operational without running database updates.
+<br>
 <br>See the change-log for details on additional fixes and improvements.
 <br>
 <br>Upgrades from versions prior to 2.2.5.0 require running system updaters located under Admin Tools --&gt; Segue Updates.
@@ -40,6 +42,8 @@
 <b>Bug Fix:</b> Installation: Updated 'slot' table SQL so that updaters do not need to be run for new installations. (<em>2008-10-14 - Adam Franco</em>)</li>
 		<li>
 <b>Bug Fix:</b> Installation: Reordered SQL files so that new installations will succeed. (<em>2008-10-14 - Adam Franco</em>)</li>
+		<li>
+<b>Bug Fix:</b> Installation: Plugin SQL files now get run automatically on install. (<em>2008-10-14 - Adam Franco</em>)</li>
 	</ul>
 <br><h2>Version 2.2.5.0</h2>
 <h3>2008-10-13</h3>
