@@ -22,6 +22,10 @@
 			The user interface for copying sites has now been merged with the user-interface
 			for copying content for a more consistent user experience.
 			
+			The 2.2.5.1 bug-fix release adds improvements to the installation process
+			to help ensure that new installations are operational without running
+			database updates.
+			
 			See the change-log for details on additional fixes and improvements.
 			
 			Upgrades from versions prior to 2.2.5.0 require running system
@@ -34,6 +38,9 @@
 		</fix>
 		<fix author='adam' date='2008-10-14'>
 			Installation: Reordered SQL files so that new installations will succeed.
+		</fix>
+		<fix author='adam' date='2008-10-14'>
+			Installation: Plugin SQL files now get run automatically on install.
 		</fix>
 	</version>
 	<version number="2.2.5.0" date="2008-10-13">
