@@ -13,6 +13,9 @@ classes' listing for students in all sections of the course.
 The user interface for copying sites has now been merged with the user-interface
 for copying content for a more consistent user experience.
 
+The 2.2.5.1 bug-fix release adds improvements to the installation process to help
+ensure that new installations are operational without running database updates.
+
 See the change-log for details on additional fixes and improvements.
 
 Upgrades from versions prior to 2.2.5.0 require running system updaters located
@@ -28,6 +31,10 @@ This Segue release uses Harmoni 1.8.2 and Polyphony 1.4.7.
 		
 	* Bug Fix: 
 		Installation: Reordered SQL files so that new installations will succeed.
+		(2008-10-14 - Adam Franco)
+		
+	* Bug Fix: 
+		Installation: Plugin SQL files now get run automatically on install.
 		(2008-10-14 - Adam Franco)
 	
 
